# serializer version: 1
# name: test_all_entities[hw_q80r_soundbar][media_player.soundbar-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'source_list': list([
        'wifi',
        'bluetooth',
        'HDMI1',
        'HDMI2',
        'digital',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.soundbar',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <MediaPlayerEntityFeature: 23949>,
    'translation_key': None,
    'unique_id': 'afcf3b91-0000-1111-2222-ddff2a0a6577',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[hw_q80r_soundbar][media_player.soundbar-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'speaker',
      'friendly_name': 'Soundbar',
      'is_volume_muted': 'unmuted',
      'media_artist': 'Rick Astley',
      'media_title': 'Never Gonna Give You Up',
      'source': 'wifi',
      'source_list': list([
        'wifi',
        'bluetooth',
        'HDMI1',
        'HDMI2',
        'digital',
      ]),
      'supported_features': <MediaPlayerEntityFeature: 23949>,
      'volume_level': 0.01,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.soundbar',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
# name: test_all_entities[vd_network_audio_002s][media_player.soundbar_living-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.soundbar_living',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <MediaPlayerEntityFeature: 21901>,
    'translation_key': None,
    'unique_id': '0d94e5db-8501-2355-eb4f-214163702cac',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[vd_network_audio_002s][media_player.soundbar_living-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'speaker',
      'friendly_name': 'Soundbar Living',
      'is_volume_muted': 'unmuted',
      'media_artist': '',
      'media_title': '',
      'source': 'HDMI1',
      'supported_features': <MediaPlayerEntityFeature: 21901>,
      'volume_level': 0.17,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.soundbar_living',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
